# rvx-sdk

./: CMakeLists.txt  LICENSE  README.md  rvx.h
boot/: rvx_startup.S
include/: rvx.h  rvx_csr.h  rvx_gpio.h  rvx_i2c.h  rvx_irq.h  rvx_macros.h  rvx_spi.h  rvx_timer.h  rvx_uart.h
ld/: bootloader.ld  rvx.ld
linker/: rvx.ld
source/: rvx_startup.S
startup/: rvx_startup.S  startup_rvx.S
